syntax = "proto3";

package goodsinfo;

option go_package = "./proto;goodsinfo";


//商品相关方法
service Goodsinfo {
	//AddGoods: 定义增加商品的微服务, 这里的写法和gRPC中的写法一致
	rpc AddGoods(AddRequest) returns (AddResponse) {}
}

//和gRPC中的写法一致
message AddRequest {
	string title = 1;
	string price = 2;
	string content = 3;
}

//和gRPC中的写法一致
message AddResponse {
	string message = 1;
	bool success = 2;
}

//service Goodsinfo {
//	rpc Call(CallRequest) returns (CallResponse) {}
//	rpc ClientStream(stream ClientStreamRequest) returns (ClientStreamResponse) {}
//	rpc ServerStream(ServerStreamRequest) returns (stream ServerStreamResponse) {}
//	rpc BidiStream(stream BidiStreamRequest) returns (stream BidiStreamResponse) {}
//}
//
//message CallRequest {
//	string name = 1;
//}
//
//message CallResponse {
//	string msg = 1;
//}
//
//message ClientStreamRequest {
//	int64 stroke = 1;
//}
//
//message ClientStreamResponse {
//	int64 count = 1;
//}
//
//message ServerStreamRequest {
//	int64 count = 1;
//}
//
//message ServerStreamResponse {
//	int64 count = 1;
//}
//
//message BidiStreamRequest {
//	int64 stroke = 1;
//}
//
//message BidiStreamResponse {
//	int64 stroke = 1;
//}
